Added Denoising Autoencoders post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
       </div>
       <h3>{{ page.title }}</h3>
       <article class="post-content">
-        <p>{{ content }}</p>
+        <p class="post-paragraph">{{ content }}</p>
       </article>
       <!-- Disqus comments -->
       {% if site.disqus %}
