--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -78,3 +78,37 @@ pre {
         }
     }
 }
+
+/**
+ * Resume iframe
+ */
+.cv-iframe {
+  position: relative;
+  padding-bottom: 60.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  border: solid black 1px;
+}
+
+@media screen and (min-width: 1000px) {
+  .cv-iframe iframe {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -350px;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .cv-iframe iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
