--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
       <div class="mdl-color-text--grey-500">
       {{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}{% if page.categories %} • {% for cat in page.categories %} {{ cat }} {% endfor %} {% endif %}
       </div>
-      <h3>{{ page.title }}</h3>
+      <h3 class="{{ page.titlecolor }}">{{ page.title }}</h3>
       <article class="post-content">
         <p class="post-paragraph">{{ content }}</p>
       </article>
